--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.3.1'
+    }
+}
+
 apply plugin: 'com.android.library'
 
 android {
@@ -10,16 +21,16 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+    lintOptions {
+        abortOnError false
     }
 }
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.facebook.react:react-native:0.20.1+'
+repositories {
+    mavenCentral()
 }
+
+dependencies {
+    compile 'com.facebook.react:react-native:+'
+}
+  
